force-app/main/default/objects/Meeting_Invite__c/Meeting_Invite__c.object-meta.xml
<CustomObject>
    <label>Meeting Invite</label>
    <nameField>
        <label>Meeting Invite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>