force-app/main/default/objects/Meeting_Invite__c/fields/Invitee_3__c.field-meta.xml
<CustomField>
    <fullName>Invitee_3__c</fullName>
    <label>Invitee 3</label>
    <type>Email</type>
</CustomField>