force-app/main/default/objects/Meeting_Invite__c/fields/Invitee_4__c.field-meta.xml
<CustomField>
    <fullName>Invitee_4__c</fullName>
    <label>Invitee 4</label>
    <type>Email</type>
</CustomField>