force-app/main/default/objects/Meeting_Invite__c/fields/Invitee_5__c.field-meta.xml
<CustomField>
    <fullName>Invitee_5__c</fullName>
    <label>Invitee 5</label>
    <type>Email</type>
</CustomField>