force-app/main/default/objects/Meeting_Invite__c/fields/Invitiee_2__c.field-meta.xml
<CustomField>
    <fullName>Invitiee_2__c</fullName>
    <label>Invitee 2</label>
    <type>Email</type>
</CustomField>