force-app/main/default/objects/Meeting_Invite__c/fields/Meeting_Time_With_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Time_With_Date__c</fullName>
    <label>Meeting Time with Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>