force-app/main/default/objects/Meeting_Invite__c/fields/Recurring_meeting__c.field-meta.xml
<CustomField>
    <fullName>Recurring_meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring meeting ?</label>
    <type>Checkbox</type>
</CustomField>