force-app/main/default/objects/Meeting_Invite__c/fields/Time_of_meeting__c.field-meta.xml
<CustomField>
    <fullName>Time_of_meeting__c</fullName>
    <label>Time of meeting</label>
    <type>Time</type>
</CustomField>