force-app/main/default/objects/Meeting_Invite__c/listViews/List_1.listView-meta.xml
<ListView>
    <fullName>List_1</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Invitees__c</columns>
    <columns>Time_of_meeting__c</columns>
    <filterScope>Mine</filterScope>
    <label>List 1</label>
</ListView>